# plutto-python

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/: release.yml  tests.yml
.github/workflows/: linters.yml
plutto/: __init__.py  client.py  constants.py  core.py  errors.py  resource_handlers.py  utils.py
plutto/managers/: __init__.py  customers_manager.py  invoices_manager.py  subscriptions_manager.py
plutto/mixins/: __initi__.py  manager_mixin.py  resource_mixin.py
plutto/resources/: __init__.py  customer.py  customer_permission.py  generic_plutto_resource.py  invoice.py  meter_event.py  permission_group.py  product.py
scripts/: bump.sh
tests/: conftest.py  test_client.py  test_core.py  test_paginator.py  test_utils.py
tests/managers/: test_customers_manager.py  test_invoices_manager.py  test_subscriptions_manager.py
tests/mixins/: test_manager_mixin.py  test_resource_mixin.py
